[package]
name = "dot013-mdparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
clio = { version = "0.3.5", features = ["clap-parse"] }
color-art = "0.3.8"
comrak = "0.21.0"
itertools = "0.12.1"
mime_guess = "2.0.4"
mime_serde_shim = "0.2.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = { version = "3.7.0", features = [ "macros" ] }
serde_yaml = "0.9.34"
url = { version = "2.5.0", features = ["serde"] }

[features]
default = ["uuid-link-to-mention"]
uuid-link-to-mention = []
npf-runtime-asserts = []
